--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,5 +45,5 @@ jobs:
       contents: read
       actions: write
       
-    #  top-level way to call a reusable workflow (no 'steps' block)
+    #  top-level way to call a reusable 
     uses: vidushiqa-2710/playwright-e2e/.github/workflows/run_tests.yml@main
